utoipa-gen/tests/snapshots/request_body_derive_test__derive_request_body_complex_required_explicit_false_success.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: body
snapshot_kind: text
---
{
  "content": {
    "text/xml": {
      "schema": {
        "oneOf": [
          {
            "$ref": "#/components/schemas/Foo"
          },
          {
            "type": "null"
          }
        ]
      }
    }
  },
  "description": "Create new Foo"
}
