utoipa-gen/tests/snapshots/request_body_derive_test__derive_request_body_complex_success.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: request_body
snapshot_kind: text
---
{
  "content": {
    "text/xml": {
      "schema": {
        "$ref": "#/components/schemas/Foo"
      }
    }
  },
  "description": "Create new Foo",
  "required": true
}
