utoipa-gen/tests/snapshots/request_body_derive_test__derive_request_body_complex_success_inline_array.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: request_body
snapshot_kind: text
---
{
  "content": {
    "text/xml": {
      "schema": {
        "items": {
          "description": "Some struct",
          "properties": {
            "name": {
              "description": "Some name",
              "type": "string"
            }
          },
          "required": [
            "name"
          ],
          "type": "object"
        },
        "type": "array"
      }
    }
  },
  "description": "Create new Foo",
  "required": true
}
