utoipa-gen/tests/snapshots/request_body_derive_test__derive_request_body_option_array_success.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: body
snapshot_kind: text
---
{
  "content": {
    "application/json": {
      "schema": {
        "items": {
          "$ref": "#/components/schemas/Foo"
        },
        "type": [
          "array",
          "null"
        ]
      }
    }
  }
}
