utoipa-gen/tests/snapshots/request_body_derive_test__derive_request_body_primitive_array_success.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: content
snapshot_kind: text
---
{
  "application/json": {
    "schema": {
      "items": {
        "format": "int64",
        "type": "integer"
      },
      "type": "array"
    }
  }
}
