utoipa-gen/tests/snapshots/request_body_derive_test__derive_request_body_simple_inline_success.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: request_body
snapshot_kind: text
---
{
  "content": {
    "application/json": {
      "schema": {
        "description": "Some struct",
        "properties": {
          "name": {
            "description": "Some name",
            "type": "string"
          }
        },
        "required": [
          "name"
        ],
        "type": "object"
      }
    }
  },
  "required": true
}
