utoipa-gen/tests/snapshots/request_body_derive_test__derive_request_body_with_multiple_content_type_guess_default_content_type.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: request_body
snapshot_kind: text
---
{
  "content": {
    "application/json": {
      "schema": {
        "$ref": "#/components/schemas/Foo"
      }
    },
    "text/xml": {
      "schema": {
        "$ref": "#/components/schemas/Foo"
      }
    }
  },
  "description": "Create new Foo",
  "required": true
}
