utoipa-gen/tests/snapshots/request_body_derive_test__multiple_request_body_with_only_content_type.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: request_body
snapshot_kind: text
---
{
  "content": {
    "application/json": {},
    "text/xml": {
      "schema": {
        "$ref": "#/components/schemas/Foo"
      }
    }
  },
  "description": "Create new Foo",
  "required": true
}
